Added firebase to the project. Right now, firebase is implemented in every view and component, so vuex state management has to be implemented, before proceeding to use firebase.

--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,12 @@ node_modules
 .firebaserc
 firebase-debug.log
 
-# firestore config
+# firebase config
 firebase.json
 firestore.indexes.json
 firestore.rules
 storage.rules
+firebaseConfig
 
 
 # local env files
