--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "firebase": "^9.6.8",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
-    "vuetify": "^2.6.0"
+    "vuetify": "^2.6.0",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.15",
     "@vue/cli-plugin-router": "~4.5.15",
+    "@vue/cli-plugin-vuex": "^4.5.15",
     "@vue/cli-service": "~4.5.15",
     "node-sass": "^4.12.0",
     "sass": "~1.32.0",
