--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
     "core-js": "^3.6.5",
@@ -17,8 +18,10 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.15",
     "@vue/cli-plugin-router": "~4.5.15",
+    "@vue/cli-plugin-unit-jest": "^4.5.17",
     "@vue/cli-plugin-vuex": "^4.5.15",
     "@vue/cli-service": "~4.5.15",
+    "@vue/test-utils": "^1.3.0",
     "node-sass": "^4.12.0",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
